ingress_alb/gateway_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: gateway-load-balancer
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${CERT_ARN} # ACM certification arn
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  rules:
    - host: ${GATEWAY_PREFIX}.${HOST_DOMAIN} # {prefix}.{domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8000
